# xllm-service

./: CMakeLists.txt  THIRDPARTYNOTICES.md
cmake/: cc_test.cmake
tests/: CMakeLists.txt
tests/xllm_service/: CMakeLists.txt
tests/xllm_service/chat_template/: CMakeLists.txt  deepseek_v4_cpp_chat_template_test.cpp  jinja_chat_template_test.cpp  message_projection_test.cpp  model_type_test.cpp
tests/xllm_service/common/: CMakeLists.txt  anthropic_tracer_test.cpp  call_data_test.cpp  types_test.cpp
tests/xllm_service/http_service/: CMakeLists.txt  anthropic_adapter_test.cpp  anthropic_stream_encoder_test.cpp  chat_json_parser_test.cpp
tests/xllm_service/scheduler/: xllm_chat_parse_bridge_test.cpp
tests/xllm_service/tokenizer/: CMakeLists.txt  tokenizer_test.cpp
vllm_sidecar/: README.md  __init__.py  etcd_registry.py  health.py  meta.py  metrics.py  requirements.txt  sidecar.py
vllm_sidecar/tests/: test_meta.py  test_metrics.py  test_sidecar.py
xllm_service/: master.cpp  master.h
xllm_service/chat_template/: CMakeLists.txt  chat_template.h  deepseek_v4_cpp_chat_template.cpp  deepseek_v4_cpp_chat_template.h  jinja_chat_template.cpp  jinja_chat_template.h  jinja_chat_template_test.cpp  message_projection.cpp  message_projection.h  mm_content_text.cpp  mm_content_text.h  model_type.cpp  model_type.h
xllm_service/common/: anthropic_tracer.cpp  anthropic_tracer.h  call_data.h  closure_guard.h  concurrent_queue.h  global_gflags.cpp  global_gflags.h  hash_util.cpp  hash_util.h  json_reader.cpp  json_reader.h  macros.h  metrics.cpp  metrics.h  options.h  slice.h  threadpool.cpp  threadpool.h  time_predictor.cpp  time_predictor.h  timer.cpp  timer.h  types.h  utils.cpp  utils.h
xllm_service/common/xllm/: output.h  status.h  uuid.cpp  uuid.h
xllm_service/examples/: http_client_test.cpp  rpc_client_test.cpp  rpc_hello_client.cpp
xllm_service/examples/vllm_backend/: README.md  start_demo.sh
xllm_service/http_service/: CMakeLists.txt  anthropic_adapter.cpp  anthropic_adapter.h  anthropic_stream_encoder.cpp  anthropic_stream_encoder.h  chat_json_parser.cpp  chat_json_parser.h  main.cpp  request_tracer.cpp  request_tracer.h  service.cpp  service.h
xllm_service/proto/: CMakeLists.txt  xllm_http_service.proto  xllm_rpc_service.proto
xllm_service/request/: request.h
xllm_service/rpc_service/: client.cpp  client.h  main.cpp  rpc_service_test.cpp  service.cpp  service.h
xllm_service/scheduler/: CMakeLists.txt  response_handler.cpp  response_handler.h  scheduler.cpp  scheduler.h  xllm_chat_parse_bridge.cpp  xllm_chat_parse_bridge.h
xllm_service/scheduler/etcd_client/: etcd_client.cpp  etcd_client.h
xllm_service/tokenizer/: CMakeLists.txt  fast_tokenizer.cpp  fast_tokenizer.h  sentencepiece_tokenizer.cpp  sentencepiece_tokenizer.h  tiktoken_tokenizer.cpp  tiktoken_tokenizer.h  tokenizer.h  tokenizer_args.cpp  tokenizer_args.h  tokenizer_factory.cpp  tokenizer_factory.h
(+12 files in other folders)
